footer alignment + cart total price fix

--- a/resources/sass/partials/main.scss
+++ b/resources/sass/partials/main.scss
@@ -235,7 +235,10 @@ img {
       justify-content: center;
       padding-top: 30px;
       padding-bottom: 30px;
-
+    }
+    .top-footer .container{
+      flex-direction: column;
+      align-items: center;
     }
   }
   @include media-breakpoint-down(lg) {
